cambios de adaptación requeridos por sonarqube